--- a/ui/static/styles/contact.css
+++ b/ui/static/styles/contact.css
@@ -1,16 +1,14 @@
 .page-contact .main > h1 {
-  color: #fff;
-  font-size: 34px;
-  line-height: 1.5;
+  color: var(--title-color);
+  font-size: var(--h1-font-size);
+  font-family: var(--bold-font);
   margin: 0;
   padding-left: 15px;
-  font-family: var(--bold-font);
-  margin-bottom: 40px;
+  margin-bottom: 32px;
 }
 
 .page-contact .main > .content {
-  border-radius: 20px;
-  background-color: #2A2B2C;
-  padding: 32px;
-  line-height: 1.5;
+  border-radius: var(--container-border-radius);
+  background-color: var(--container-color);
+  padding: var(--container-padding);
 }
