--- a/ui/templates/__game_sudoku_crown.html
+++ b/ui/templates/__game_sudoku_crown.html
@@ -3,7 +3,19 @@
 {{- end -}}
 
 {{- define "game-sudoku-crown-info" -}}
-  info
+  <img src="#" class="app-icon" />
+
+  <div class="data">
+    <h1>Sudoku Crown</h1>
+    <p>Desc desc desc</p>
+  </div>
+
+  <div class="download">
+    <a href="#" class="ios">
+      <span>Download on the</span>
+      <strong>App Store</strong>
+    </a>
+  </div>
 {{- end -}}
 
 {{- define "game-sudoku-crown-interface" -}}
