--- a/ui/static/styles/games.css
+++ b/ui/static/styles/games.css
@@ -1,30 +1,60 @@
-.page-games .main {
-  padding-top: 0;
-}
-
 .page-games .main > .banners {
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-color: #2A2B2C;
+  border-radius: var(--container-border-radius);
+  background-color: var(--container-color);
   height: 300px;
-  margin-bottom: 40px;
+  margin-bottom: 32px;
 }
 
 .page-games .main > .content {
-  border-radius: 20px;
-  background-color: #2A2B2C;
-  line-height: 1.5;
+  border-radius: var(--container-border-radius);
+  background-color: var(--container-color);
 }
 
 .page-games .main > .content .app-info {
-  padding: 32px;
+  padding: var(--container-padding);
+  display: flex;
+  align-items: center;
+}
+
+.page-games .main > .content .app-info .app-icon {
+  display: block;
+  width: 88px;
+  height: 88px;
+  border-radius: 12px;
+  background: #000;
+  margin-right: 12px;
+}
+
+.page-games .main > .content .app-info .app-icon img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.page-games .main > .content .app-info .data {
+  flex: 1;
+}
+
+.page-games .main > .content .app-info .data h1 {
+  display: block;
+  color: var(--title-color);
+  font-size: var(--h2-font-size);
+  margin: 0;
+}
+
+.page-games .main > .content .app-info .data p {
+  display: block;
+  color: var(--text-color);
+  font-size: var(--h2-font-size);
+  margin: 0;
 }
 
 .page-games .main > .content .app-interface {
-  background-color: rgba(0, 0, 0, 0.12);
-  padding: 32px;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: var(--container-padding);
 }
 
 .page-games .main > .content article {
-  padding: 32px;
+  padding: var(--container-padding);
 }
