--- a/ui/templates/news.html
+++ b/ui/templates/news.html
@@ -9,7 +9,9 @@
   {{- template "app-header" . -}}
 
   <div class="main">
-    {{.active}}
+    <h1>News</h1>
+
+    <div class="content">content</div>
   </div>
 
   {{- template "app-footer" . -}}
