--- a/ui/templates/__app_header.html
+++ b/ui/templates/__app_header.html
@@ -1,7 +1,7 @@
 {{- define "app-header" -}}
   <header class="app-header">
     <div class="inner">
-      <div class="logo"></div>
+      <a class="logo" href="/"></a>
 
       <nav>
         <ul>
