--- a/ui/templates/__head.html
+++ b/ui/templates/__head.html
@@ -7,6 +7,8 @@
   <title>YSGame Studios</title>
   {{- end -}}
   <link rel="icon" href="https://www.sufystatic.com/favicon.ico" />
+  <link rel="preload" href="/static/fonts/Nunito-Regular.ttf" as="font" type="font/tff" crossorigin>
+  <link rel="preload" href="/static/fonts/Nunito-SemiBold.ttf" as="font" type="font/tff" crossorigin>
   <link type="text/css" rel="stylesheet" href="/static/styles/normalize.css">
   <link type="text/css" rel="stylesheet" href="/static/styles/common.css">
   {{- if eq .active "games" -}}
