--- a/ui/static/styles/contact.css
+++ b/ui/static/styles/contact.css
@@ -4,7 +4,7 @@
   font-family: var(--bold-font);
   margin: 0;
   padding-left: 15px;
-  margin-bottom: 32px;
+  margin-bottom: var(--margin-big);
 }
 
 .page-contact .main > .content {
