--- a/ui/static/styles/games.css
+++ b/ui/static/styles/games.css
@@ -1,8 +1,74 @@
-.page-games .main > .banners {
+.page-home {
+  display: block;
+}
+
+.page-home .game {
+  border-radius: var(--container-border-radius);
+  background-color: var(--container-color);
+  margin-bottom: var(--margin-big);
+  overflow: hidden;
+}
+
+.page-home .game:last-child {
+  margin-bottom: 0;
+}
+
+.page-home .game .banner {
+  height: 300px;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.page-home .game .info {
+  padding: var(--container-padding);
+  display: flex;
+  align-items: center;
+}
+
+.page-home .game .info .app-icon {
+  display: block;
+  width: 66px;
+  height: 66px;
+  border-radius: 12px;
+  background: #000;
+  margin-right: 20px;
+}
+
+.page-home .game .info .app-icon img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.page-home .game .info .data {
+  flex: 1;
+}
+
+.page-home .game .info .data h1 {
+  display: block;
+  color: var(--title-color);
+  font-size: var(--h2-font-size);
+  margin: 0;
+}
+
+.page-home .game .info .data p {
+  display: block;
+  color: var(--text-color);
+  font-size: var(--text-font-size);
+  margin: 0;
+}
+
+.page-home .game .info .download {
+  display: flex;
+  align-items: center;
+}
+
+.page-games .main > .banner {
   border-radius: var(--container-border-radius);
   background-color: var(--container-color);
   height: 300px;
-  margin-bottom: 32px;
+  margin-bottom: var(--margin-big);
 }
 
 .page-games .main > .content {
@@ -18,11 +84,11 @@
 
 .page-games .main > .content .app-info .app-icon {
   display: block;
-  width: 88px;
-  height: 88px;
+  width: 66px;
+  height: 66px;
   border-radius: 12px;
   background: #000;
-  margin-right: 12px;
+  margin-right: 20px;
 }
 
 .page-games .main > .content .app-info .app-icon img {
@@ -46,15 +112,86 @@
 .page-games .main > .content .app-info .data p {
   display: block;
   color: var(--text-color);
-  font-size: var(--h2-font-size);
+  font-size: var(--text-font-size);
   margin: 0;
 }
+
+.page-games .main > .content .app-info .download {
+  display: flex;
+  align-items: center;
+}
+
+
 
 .page-games .main > .content .app-interface {
   background-color: rgba(0, 0, 0, 0.2);
   padding: var(--container-padding);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.page-games .main > .content .app-interface img {
+  display: block;
+  width: 240px;
+  height: 480px;
+  margin: 0 20px;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .page-games .main > .content article {
   padding: var(--container-padding);
+}
+
+.page-games .main > .content article p {
+  color: var(--text-color);
+  margin: 0 0 var(--margin-small) 0;
+}
+
+.page-games .main > .content article .download {
+  width: min-content;
+  margin: 0 auto;
+}
+
+@media (max-width: 800px) {
+  .page-home .game .info {
+    align-items: flex-start;
+  }
+
+  .page-home .game .info .app-icon {
+    width: 60px;
+    height: 60px;
+    margin-right: 12px;
+    border-radius: 10px;
+  }
+
+  .page-home .game .info .data p {
+    line-height: 1.2;
+    font-size: 14px;
+  }
+
+  .page-home .game .info .download {
+    display: none;
+  }
+
+  .page-games .main > .content .app-info {
+    align-items: flex-start;
+  }
+
+  .page-games .main > .content .app-info .app-icon {
+    width: 60px;
+    height: 60px;
+    margin-right: 12px;
+    border-radius: 10px;
+  }
+
+  .page-games .main > .content .app-info .data p {
+    line-height: 1.2;
+    font-size: 14px;
+  }
+
+  .page-games .main > .content .app-info .download {
+    display: none;
+  }
 }
