--- a/ui/static/styles/news.css
+++ b/ui/static/styles/news.css
@@ -4,11 +4,23 @@
   font-family: var(--bold-font);
   margin: 0;
   padding-left: 15px;
-  margin-bottom: 32px;
+  margin-bottom: var(--margin-big);
 }
 
 .page-news .main > .content {
   border-radius: var(--container-border-radius);
   background-color: var(--container-color);
   padding: var(--container-padding);
+}
+
+.page-news .main > .content h2 {
+  font-size: var(--h2-font-size);
+  color: var(--title-color);
+  margin: 0;
+}
+
+.page-news .main > .content p {
+  font-size: var(--text-font-size);
+  color: var(--text-color);
+  margin: 0;
 }
