--- a/ui/templates/news.html
+++ b/ui/templates/news.html
@@ -11,7 +11,10 @@
   <div class="main">
     <h1>News</h1>
 
-    <div class="content">content</div>
+    <div class="content">
+      <h2>Sudoku Crown 1.5.1 release</h2>
+      <p>Sudoku Crown 1.5.1 new released</p>
+    </div>
   </div>
 
   {{- template "app-footer" . -}}
