[WIP] 添加 privacy

--- a/ui/templates/__head.html
+++ b/ui/templates/__head.html
@@ -16,7 +16,7 @@
   {{- else if eq .active "news" -}}
   <link type="text/css" rel="stylesheet" href="/static/styles/news.css">
   {{- else if eq .active "privacy_policy" -}}
-  <link type="text/css" rel="stylesheet" href="/static/styles/privacy_policy.css">
+  <link type="text/css" rel="stylesheet" href="/static/styles/privacy.css">
   {{- else if eq .active "contact" -}}
   <link type="text/css" rel="stylesheet" href="/static/styles/contact.css">
   {{- end -}}
