--- a/ui/templates/__app_header.html
+++ b/ui/templates/__app_header.html
@@ -16,9 +16,9 @@
           <li><a href="/news">NEWS</a></li>
           {{- end -}}
           {{- if eq .active "privacy_policy" -}}
-          <li><a href="/privacy-policy" class="active">PRIVACY POLICY</a></li>
+          <li><a href="/privacy" class="active">PRIVACY POLICY</a></li>
           {{- else -}}
-          <li><a href="/privacy-policy">PRIVACY POLICY</a></li>
+          <li><a href="/privacy">PRIVACY POLICY</a></li>
           {{- end -}}
           {{- if eq .active "contact" -}}
           <li><a href="/contact" class="active">CONTACT</a></li>
