--- a/ui/static/styles/news.css
+++ b/ui/static/styles/news.css
@@ -24,3 +24,9 @@
   color: var(--text-color);
   margin: 0;
 }
+
+@media (max-width: 800px) {
+  .page-news .main > h1 {
+    padding-left: 10px;
+  }
+}
