--- a/ui/templates/__app_footer.html
+++ b/ui/templates/__app_footer.html
@@ -1,5 +1,7 @@
+// todo: Join the LOGISK community! Follow us on any of the following platforms to get updates about our games.
+
 {{- define "app-footer" -}}
   <footer class="app-footer">
-    <small>YSGAME Studios 2023 @ copyright</small>
+    <small>© 2023 YSGAME Studio. All rights reserved.</small>
   </footer>
 {{- end -}}
