--- a/ui/templates/__app_header.html
+++ b/ui/templates/__app_header.html
@@ -11,9 +11,9 @@
           <li><a href="/">GAMES</a></li>
           {{- end -}}
           {{- if eq .active "news" -}}
-          <li><a href="/news" class="active">NEWS</a></li>
+          <!-- <li><a href="/news" class="active">NEWS</a></li> -->
           {{- else -}}
-          <li><a href="/news">NEWS</a></li>
+          <!-- <li><a href="/news">NEWS</a></li> -->
           {{- end -}}
           {{- if eq .active "privacy_policy" -}}
           <li><a href="/privacy" class="active">PRIVACY POLICY</a></li>
