--- a/ui/templates/privacy.html
+++ b/ui/templates/privacy.html
@@ -9,16 +9,16 @@
   {{- template "app-header" . -}}
 
   <div class="main">
-    <h1>YSGame Stuio Privacy Policy</h1>
+    <h1>YSGAME Stuio Privacy Policy</h1>
     <time>Last Updated: August 23, 2023</time>
 
     <div class="content">
-      <p>At YSGame Studio, we value your comments, suggestions and feedback. Our Privacy Policy sets out how we collect, use and disclose "personal information" and other "non personal information" we have gathered about you.</p>
+      <p>At YSGAME Studio, we value your comments, suggestions and feedback. Our Privacy Policy sets out how we collect, use and disclose "personal information" and other "non personal information" we have gathered about you.</p>
 
       <h2>WHO WE ARE</h2>
 
-      <p>YSGame Studio Inc. is a company under the laws of China ("YSGame" or "YSGame Studio" or "we"), a developer and publisher of games and mobile game applications that are made available via app stores including the Apple App Store and Google Play Store.</p>
-      <p>The purpose of this policy is to provide you with all the important information and explanations about how and why some of your data may be collected and processed by YSGame when you use one of our products ("Games"), and websites we control, including <a href="https://www.yaoshangtech.com">https://www.yaoshangtech.com</a> ("Website") (together "Services") . By using our Services, you agree to be bound by this Privacy Policy and consent to our processing of information as specified therein.</p>
+      <p>YSGAME Studio Inc. is a company under the laws of China ("YSGAME" or "YSGAME Studio" or "we"), a developer and publisher of games and mobile game applications that are made available via app stores including the Apple App Store and Google Play Store.</p>
+      <p>The purpose of this policy is to provide you with all the important information and explanations about how and why some of your data may be collected and processed by YSGAME when you use one of our products ("Games"), and websites we control, including <a href="https://www.yaoshangtech.com">https://www.yaoshangtech.com</a> ("Website") (together "Services") . By using our Services, you agree to be bound by this Privacy Policy and consent to our processing of information as specified therein.</p>
       
       <h2>INFORMATION WE COLLECT FROM YOU</h2>
 
@@ -89,7 +89,7 @@
         </ul>
 
         <h3>Other Sharing</h3>
-        <p>We will share your Personal Information if we have a good faith belief that (i) access, use, preservation or disclosure of such information is reasonably necessary to satisfy any applicable law, regulation, legal process, such as a court order or subpoena, or a request by law enforcement or governmental authorities, (ii) such action is necessary to detect, prevent, or otherwise address fraud, security or technical issues associated with the Service, or (iii) such action is appropriate to protect the rights, property or safety of YSGame, its employees, clients, or users of our Services.</p>
+        <p>We will share your Personal Information if we have a good faith belief that (i) access, use, preservation or disclosure of such information is reasonably necessary to satisfy any applicable law, regulation, legal process, such as a court order or subpoena, or a request by law enforcement or governmental authorities, (ii) such action is necessary to detect, prevent, or otherwise address fraud, security or technical issues associated with the Service, or (iii) such action is appropriate to protect the rights, property or safety of YSGAME, its employees, clients, or users of our Services.</p>
 
         <h3>Links to Other Sites</h3>
         <p>Our Services may contain links to other sites and applications. If you click on a third-party link, you will be directed to that site. These external services are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites and mobile applications. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
@@ -98,7 +98,7 @@
       <h2>RETENTION</h2>
 
       <p>We will keep your Personal Information for the length of time required to provide you with our Services and for the reasons described in this privacy policy, unless a longer retention period is required or permitted by law. Afterwards, we delete all aforementioned data in our possession within a reasonable time frame. We do not verify the correctness of personal data that we collect or you provide.</p>
-      <p>Please note that some data may be retained if necessary to resolve disputes, enforce YSGame user agreements, and comply with technical and legal requirements and constraints related to the security, integrity, and operation of our Services. If you request us to delete your data will delete your data as described below in “Your Rights” Section.</p>
+      <p>Please note that some data may be retained if necessary to resolve disputes, enforce YSGAME user agreements, and comply with technical and legal requirements and constraints related to the security, integrity, and operation of our Services. If you request us to delete your data will delete your data as described below in “Your Rights” Section.</p>
 
       <h2>ADVERTISING</h2>
 
@@ -164,7 +164,7 @@
         <li>Need to comply with a legal obligation.</li>
         <li>Otherwise use your personal information, internally, in a lawful manner that is compatible with the context in which you provided the information.</li>
       </ul>
-      <p>Right to Opt Out: YSGame does not sell any of your personal information for any purposes.</p>
+      <p>Right to Opt Out: YSGAME does not sell any of your personal information for any purposes.</p>
       <p>Other Rights: In addition to the rights above, you also have the right to request certain information about our disclosure of personal information to third parties for their own direct marketing purposes during the calendar year preceding your request. This request is free and may be made only once a year.</p>
       <p>You also have the right not to be discriminated against for exercising any of the rights of California residents listed in this section.</p>
       <p>If you would like to exercise any of the rights listed above, please follow the instructions in the section "Data Requests" below and contact us at the addresses below in the section entitled “Contact Us".</p>
@@ -173,7 +173,7 @@
       <p>Whether you’re making a data request under GDPR or CCPA, we will need certain information in order to verify your identity and process a data request. Please provide your unique Advertising IDs for any device you’re using to play the Game, along with the device type (Android or iOS) associated with each Advertising ID.</p>
 
       <h2>INTERNATIONAL TRANSFER</h2>
-      <p>YSGame is based in the Shanghai. Your personal information may be transferred to and processed in countries other than the country in which you are resident. These countries may have data protection laws that are different to the laws of your country. Some of the partners and processors referred to in this policy are located outside of the European Union.</p>
+      <p>YSGAME is based in the Shanghai. Your personal information may be transferred to and processed in countries other than the country in which you are resident. These countries may have data protection laws that are different to the laws of your country. Some of the partners and processors referred to in this policy are located outside of the European Union.</p>
       <p>In such case, we ensure that:</p>
       <ul>
         <li>the personal data is transferred to countries recognized as offering an equivalent level of protection or,</li>
@@ -187,7 +187,7 @@
       <p>We do not store any of your personal information.</p>
 
       <h2>CHILDREN'S PRIVACY</h2>
-      <p>We do not knowingly collect any personal information from children under the age of 13, allow them to sign up for newsletters, make purchases, or use the Service. In addition, we may limit how we collect, use, and store some of the information of EU users between 13 and 16. YSGame takes children’s privacy seriously and encourages parents to play an active role in their children’s online experience at all times. We urge parents to instruct their children never to give out their real names, addresses, or phone numbers, without parental permission, when online.</p>
+      <p>We do not knowingly collect any personal information from children under the age of 13, allow them to sign up for newsletters, make purchases, or use the Service. In addition, we may limit how we collect, use, and store some of the information of EU users between 13 and 16. YSGAME takes children’s privacy seriously and encourages parents to play an active role in their children’s online experience at all times. We urge parents to instruct their children never to give out their real names, addresses, or phone numbers, without parental permission, when online.</p>
 
       <h2>POLICY UPDATES</h2>
       <p>This Policy may change from time to time. We will always keep this up to date so that you know what information we will collect from you, how we may use it, and when we may disclose it.</p>
