--- a/ui/static/styles/contact.css
+++ b/ui/static/styles/contact.css
@@ -12,3 +12,9 @@
   background-color: var(--container-color);
   padding: var(--container-padding);
 }
+
+@media (max-width: 800px) {
+  .page-contact .main > h1 {
+    padding-left: 10px;
+  }
+}
