--- a/ui/templates/404.html
+++ b/ui/templates/404.html
@@ -8,9 +8,9 @@
 <body class="page-404">
   {{- template "app-header" . -}}
   
-  <div class="main">
+  <main class="main">
     404 Page Not Found
-  </div>
+  </main>
 
   {{- template "app-footer" . -}}
 </body>
