--- a/ui/templates/__game_block_cuties.html
+++ b/ui/templates/__game_block_cuties.html
@@ -19,15 +19,26 @@
 {{- end -}}
 
 {{- define "game-block-cuties-interface" -}}
-  <img alt="Block Cuties" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/bf/1e/4e/bf1e4ed9-167c-7372-8fba-f8e5b115a486/c0815d9d-df5a-4ef3-9177-d82e185a1a11_11.png/1242x2688bb.png" />
-  <img alt="Block Cuties" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/89/35/72/89357206-072b-598d-8bab-30172bdb9372/55a2d251-2a2c-4705-9fa7-da782edd4cea_22.png/1242x2688bb.png" />
-  <img alt="Block Cuties" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/3b/30/79/3b30791e-df15-8a83-d90b-de4a5e5d7d46/bbd54b05-eb3e-4ed8-9aed-fffad018f096_33.png/1242x2688bb.png" />
+  <div class="list">
+    <img alt="Block Cuties" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/bf/1e/4e/bf1e4ed9-167c-7372-8fba-f8e5b115a486/c0815d9d-df5a-4ef3-9177-d82e185a1a11_11.png/1242x2688bb.png" />
+    <img alt="Block Cuties" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/89/35/72/89357206-072b-598d-8bab-30172bdb9372/55a2d251-2a2c-4705-9fa7-da782edd4cea_22.png/1242x2688bb.png" />
+    <img alt="Block Cuties" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/3b/30/79/3b30791e-df15-8a83-d90b-de4a5e5d7d46/bbd54b05-eb3e-4ed8-9aed-fffad018f096_33.png/1242x2688bb.png" />
+  </div>
 {{- end -}}
 
 {{- define "game-block-cuties-content" -}}
   <p>The perfect fusion of blocks and match-3 games! Simple controls, delightful sound effects, adorable visuals, all come together to bring you a relaxing and enjoyable gaming experience! Block Cuties will keep you hooked!</p>
 
   <div class="download">
+    <a href="https://apps.apple.com/us/app/block-cuties/id6459511367" alt="Block Cuties" target="_blank" class="download-ios">
+      <span>Download on the</span>
+      <strong>App Store</strong>
+    </a>
+  </div>
+{{- end -}}
+
+{{- define "game-block-cuties-download" -}}
+  <div class="download-bar">
     <a href="https://apps.apple.com/us/app/block-cuties/id6459511367" alt="Block Cuties" target="_blank" class="download-ios">
       <span>Download on the</span>
       <strong>App Store</strong>
