--- a/ui/templates/__head.html
+++ b/ui/templates/__head.html
@@ -2,11 +2,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {{- if .title -}}
-  <title>YSGame Studios - {{.title}}</title>
+  <title>YSGame Studio - {{.title}}</title>
   {{- else -}}
-  <title>YSGame Studios</title>
+  <title>YSGame Studio</title>
   {{- end -}}
-  <link rel="icon" href="https://www.sufystatic.com/favicon.ico" />
+  <link rel="icon" href="/static/images/favicon.ico" />
   <link rel="preload" href="/static/fonts/Nunito-Regular.ttf" as="font" type="font/tff" crossorigin>
   <link rel="preload" href="/static/fonts/Nunito-SemiBold.ttf" as="font" type="font/tff" crossorigin>
   <link type="text/css" rel="stylesheet" href="/static/styles/normalize.css">
