--- a/ui/templates/news.html
+++ b/ui/templates/news.html
@@ -8,14 +8,14 @@
 <body class="page-news">
   {{- template "app-header" . -}}
 
-  <div class="main">
+  <main class="main">
     <h1>News</h1>
 
     <div class="content">
       <h2>Sudoku Crown 1.5.1 release</h2>
       <p>Sudoku Crown 1.5.1 new released</p>
     </div>
-  </div>
+  </main>
 
   {{- template "app-footer" . -}}
 </body>
