--- a/ui/templates/privacy.html
+++ b/ui/templates/privacy.html
@@ -8,7 +8,7 @@
 <body class="page-privacy">
   {{- template "app-header" . -}}
 
-  <div class="main">
+  <main class="main">
     <h1>YSGAME Stuio Privacy Policy</h1>
     <time>Last Updated: August 23, 2023</time>
 
@@ -195,7 +195,7 @@
       <h2>CONTACT US</h2>
       <p>If you have any questions about our Privacy Policy, please contact us at: <a href="mailto:easonchiu19860129@gmail.com">easonchiu19860129@gmail.com</a></p>
     </div>
-  </div>
+  </main>
 
   {{- template "app-footer" . -}}
 </body>
