--- a/ui/static/styles/common.css
+++ b/ui/static/styles/common.css
@@ -48,12 +48,11 @@ body {
   box-sizing: border-box;
 }
 
-body > .main {
+body .main {
   width: var(--main-width);
-  margin: 0 auto;
   padding: 40px 0;
+  margin: 0 auto;
   min-height: 100px;
-  overflow: hidden;
 }
 
 .app-header {
@@ -61,7 +60,6 @@ body > .main {
   background-color: rgba(40, 40, 40, 0.9);
   backdrop-filter: blur(5px);
   border-bottom: 1px solid var(--container-border-color);
-  overflow: hidden;
   position: sticky;
   left: 0;
   top: 0;
@@ -126,9 +124,51 @@ body > .main {
   color: var(--title-color);
 }
 
+.app-header .inner .home {
+  display: none;
+  color: var(--title-color);
+  font-size: var(--small-font-size);
+  text-decoration: none;
+  margin: 0 10px 0 auto;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--bold-font);
+}
+
+.app-header .inner .home svg {
+  display: block;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  margin-top: -2px;
+}
+
 .app-footer {
   display: block;
   padding-bottom: 50px;
+}
+
+.app-footer nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+
+.app-footer nav li {
+  padding: 0 20px;
+}
+
+.app-footer nav li a {
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  text-decoration: none;
+  transition: all 0.2s ease-out;
+}
+
+.app-footer nav li a:hover {
+  color: var(--title-color);
 }
 
 .app-footer small {
@@ -179,7 +219,6 @@ body > .main {
   color: #fff;
   line-height: 1;
   font-size: 18.5px;
-  letter-spacing: 1px;
   white-space: nowrap;
 }
 
@@ -195,9 +234,9 @@ body > .main {
     --margin-small: 15px;
   }
 
-  body > .main {
-    width: auto;
+  body .main {
     padding: 16px;
+    width: auto;
     margin: 0 0 12px 0;
   }
 
@@ -224,8 +263,16 @@ body > .main {
   }
 }
 
-@media (max-width: 420px) {
+@media (max-width: 440px) {
   .app-header .inner nav {
     display: none;
+  }
+
+  .app-header .inner .home {
+    display: flex;
+  }
+
+  .app-footer nav li {
+    padding: 0 10px;
   }
 }
