--- a/ui/static/styles/games.css
+++ b/ui/static/styles/games.css
@@ -17,6 +17,22 @@
   height: 300px;
   display: block;
   background-color: rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.page-home .game .banner .list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: var(--container-padding);
+}
+
+.page-home .game .banner .list img {
+  display: block;
+  width: 240px;
+  margin: 0 20px;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .page-home .game .info {
@@ -62,6 +78,14 @@
 .page-home .game .info .download {
   display: flex;
   align-items: center;
+}
+
+.page-home .game .download-bar {
+  padding: var(--container-padding);
+  padding-top: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .page-games .main > .banner {
@@ -121,20 +145,22 @@
   align-items: center;
 }
 
-
-
 .page-games .main > .content .app-interface {
   background-color: rgba(0, 0, 0, 0.2);
   padding: var(--container-padding);
+  overflow: auto;
+}
+
+.page-games .main > .content .app-interface .list {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: max-content;
 }
 
 .page-games .main > .content .app-interface img {
   display: block;
   width: 240px;
-  height: 480px;
   margin: 0 20px;
   border-radius: 15px;
   background-color: rgba(0, 0, 0, 0.2);
@@ -154,7 +180,39 @@
   margin: 0 auto;
 }
 
+.page-games .download-bar {
+  display: none;
+  position: sticky;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(35, 35, 35, 0.97);
+  z-index: 99;
+  padding: 15px 0;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 800px) {
+  .page-home .game .banner .list img {
+    display: none;
+    margin: 0 10px;
+    width: 28%;
+    height: auto;
+  }
+
+  .page-home .game .banner .list img:nth-child(1) {
+    display: block;
+  }
+
+  .page-home .game .banner .list img:nth-child(2) {
+    display: block;
+  }
+
+  .page-home .game .banner .list img:nth-child(3) {
+    display: block;
+  }
+
   .page-home .game .info {
     align-items: flex-start;
   }
@@ -175,6 +233,10 @@
     display: none;
   }
 
+  .page-home .game .download-bar {
+    display: flex;
+  }
+
   .page-games .main > .content .app-info {
     align-items: flex-start;
   }
@@ -193,5 +255,41 @@
 
   .page-games .main > .content .app-info .download {
     display: none;
+  }
+
+  .page-games .main > .content article .download {
+    display: none;
+  }
+
+  .page-games .download-bar {
+    display: flex;
+  }
+}
+
+@media (max-width: 440px) {
+  .page-home .game .banner {
+    height: auto;
+  }
+
+  .page-home .game .banner .list {
+    padding: var(--container-padding) 0;
+  }
+
+  .page-home .game .banner .list img {
+    width: 40%;
+    border-radius: 10px;
+  }
+
+  .page-home .game .banner .list img:nth-child(3) {
+    display: none;
+  }
+
+  .page-games .main > .banner {
+    display: none;
+  }
+
+  .page-games .main > .content .app-interface img {
+    margin: 0 10px;
+    width: 200px;
   }
 }
