--- a/ui/templates/__game_sudoku_crown.html
+++ b/ui/templates/__game_sudoku_crown.html
@@ -19,10 +19,12 @@
 {{- end -}}
 
 {{- define "game-sudoku-crown-interface" -}}
-  <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/80/3a/60/803a602e-85e5-1988-b288-06b34e116a0b/e5f7a9c5-57b8-4ee3-a225-b1f5893b71a3_11.jpg/1242x2688bb.png" />
-  <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/14/12/dc/1412dc7e-ad78-5e7b-c42f-cfe5ea9ed785/b74a1f5f-1b4c-4480-86aa-9a2efbfce23a_22.jpg/1242x2688bb.png" />
-  <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/b9/5f/8f/b95f8f2e-a7b9-886a-d223-806c7a2b2be4/32fedb43-2637-4688-92b5-c70a8a2b90cb_33.jpg/1242x2688bb.png" />
-  <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/a6/c4/6f/a6c46f34-b7d2-85e4-c5ca-c248e44c262b/4348711c-38a7-4aa8-803e-ca06da5b7df3_44.jpg/1242x2688bb.png" />
+  <div class="list">
+    <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/80/3a/60/803a602e-85e5-1988-b288-06b34e116a0b/e5f7a9c5-57b8-4ee3-a225-b1f5893b71a3_11.jpg/1242x2688bb.png" />
+    <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/14/12/dc/1412dc7e-ad78-5e7b-c42f-cfe5ea9ed785/b74a1f5f-1b4c-4480-86aa-9a2efbfce23a_22.jpg/1242x2688bb.png" />
+    <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/b9/5f/8f/b95f8f2e-a7b9-886a-d223-806c7a2b2be4/32fedb43-2637-4688-92b5-c70a8a2b90cb_33.jpg/1242x2688bb.png" />
+    <img alt="Sudoku Crown" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/a6/c4/6f/a6c46f34-b7d2-85e4-c5ca-c248e44c262b/4348711c-38a7-4aa8-803e-ca06da5b7df3_44.jpg/1242x2688bb.png" />
+  </div>
 {{- end -}}
 
 {{- define "game-sudoku-crown-content" -}}
@@ -31,6 +33,15 @@
   <p>Download our Sudoku game and challenge your brain now! It's available for free on the App Store!</p>
 
   <div class="download">
+    <a href="https://apps.apple.com/us/app/sudoku-crown/id6450429527" alt="Sudoku Crown" target="_blank" class="download-ios">
+      <span>Download on the</span>
+      <strong>App Store</strong>
+    </a>
+  </div>
+{{- end -}}
+
+{{- define "game-sudoku-crown-download" -}}
+  <div class="download-bar">
     <a href="https://apps.apple.com/us/app/sudoku-crown/id6450429527" alt="Sudoku Crown" target="_blank" class="download-ios">
       <span>Download on the</span>
       <strong>App Store</strong>
