--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -8,36 +8,39 @@
 <body class="page-home">
   {{- template "app-header" . -}}
 
-  <div class="main">
+  <main class="main">
     <div class="games">
       <div class="game">
         <a class="banner" href="/games/sudoku-crown">
-          {{- template "game-sudoku-crown-banner" . -}}  
+          {{- template "game-sudoku-crown-interface" . -}}  
         </a>
         <div class="info">
           {{- template "game-sudoku-crown-info" . -}}
         </div>
+        {{- template "game-sudoku-crown-download" . -}}
       </div>
 
       <div class="game">
         <a class="banner" href="/games/block-cuties">
-          {{- template "game-block-cuties-banner" . -}}  
+          {{- template "game-block-cuties-interface" . -}}  
         </a>
         <div class="info">
           {{- template "game-block-cuties-info" . -}}
         </div>
+        {{- template "game-block-cuties-download" . -}}
       </div>
 
       <div class="game">
         <a class="banner" href="/games/digit-merge">
-          {{- template "game-digit-merge-banner" . -}}  
+          {{- template "game-digit-merge-interface" . -}}  
         </a>
         <div class="info">
           {{- template "game-digit-merge-info" . -}}
         </div>
+        {{- template "game-digit-merge-download" . -}}
       </div>
     </div>
-  </div>
+  </main>
 
   {{- template "app-footer" . -}}
 </body>
