--- a/ui/templates/404.html
+++ b/ui/templates/404.html
@@ -9,7 +9,7 @@
   {{- template "app-header" . -}}
   
   <main class="main">
-    404 Page Not Found
+    <p>Hmm...this page doesn’t exist. <a href="/">Back to home</a>.</p>
   </main>
 
   {{- template "app-footer" . -}}
