--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -12,36 +12,36 @@
     <div class="games">
       <div class="game">
         <a class="banner" href="/games/sudoku-crown">
-          {{- template "game-sudoku-crown-interface" . -}}  
+          {{- template "game-sudoku-crown-interface" -}}  
         </a>
         <div class="info">
-          {{- template "game-sudoku-crown-info" . -}}
+          {{- template "game-sudoku-crown-info" -}}
         </div>
-        {{- template "game-sudoku-crown-download" . -}}
+        {{- template "game-sudoku-crown-download" -}}
       </div>
 
       <div class="game">
         <a class="banner" href="/games/block-cuties">
-          {{- template "game-block-cuties-interface" . -}}  
+          {{- template "game-block-cuties-interface" -}}  
         </a>
         <div class="info">
-          {{- template "game-block-cuties-info" . -}}
+          {{- template "game-block-cuties-info" -}}
         </div>
-        {{- template "game-block-cuties-download" . -}}
+        {{- template "game-block-cuties-download" -}}
       </div>
 
       <div class="game">
         <a class="banner" href="/games/digit-merge">
-          {{- template "game-digit-merge-interface" . -}}  
+          {{- template "game-digit-merge-interface" -}}  
         </a>
         <div class="info">
-          {{- template "game-digit-merge-info" . -}}
+          {{- template "game-digit-merge-info" -}}
         </div>
-        {{- template "game-digit-merge-download" . -}}
+        {{- template "game-digit-merge-download" -}}
       </div>
     </div>
   </main>
 
-  {{- template "app-footer" . -}}
+  {{- template "app-footer" -}}
 </body>
 </html>
