--- a/ui/templates/__game_digit_merge.html
+++ b/ui/templates/__game_digit_merge.html
@@ -15,10 +15,9 @@
 
 {{- define "game-digit-merge-interface" -}}
   <div class="list">
-    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/8e/82/6b/8e826b31-7cc7-c37f-0e0e-c25195b75531/1f76b56e-09a1-40cc-b0e3-ab5ec0cac20d_1__U00281_U0029.png/1290x2796bb.png" />
-    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/4d/71/c6/4d71c661-46e5-af5d-7a47-60b30b58ead1/fe0c9f96-ed67-40da-8356-95eeaa6b452d_2__U00281_U0029.png/1290x2796bb.png" />
-    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/ae/5f/b0/ae5fb0ba-ae4f-ed97-be17-94a08f0482e0/0c18a4be-b05a-4b0d-93a9-03bbaa954448_3__U00281_U0029.png/1290x2796bb.png" />
-    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource116/v4/8a/91/6e/8a916e82-ef9a-23db-a366-519d33df6012/d58aa9a6-e373-468c-b3b9-8f1eb6d0b6b6_4__U00281_U0029.png/1290x2796bb.png" />
+    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/55/54/b6/5554b6a1-ca4c-7961-e716-4e6648dfe675/49c9ba49-8a68-4720-8ae5-a6883c475213__U753b_U677f_2.png/460x0w.webp" />
+    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/77/fc/27/77fc2741-792c-b2af-3ad1-8c2fe0a225c3/ec1e695b-7884-4f33-9566-3fb3cb7c168b__U753b_U677f_1.png/460x0w.webp" />
+    <img alt="Digit Merge!" src="https://is1-ssl.mzstatic.com/image/thumb/PurpleSource126/v4/e0/20/a6/e020a689-3be0-3794-fc01-6a8d980f7874/0f7c4cb6-283e-4309-a18e-65dc10c7d75f__U753b_U677f_3.png/460x0w.webp" />
   </div>
 {{- end -}}
 
