--- a/ui/templates/__app_footer.html
+++ b/ui/templates/__app_footer.html
@@ -12,5 +12,6 @@
     </nav>
     
     <small>© 2023 YSGAME Studio. All rights reserved.</small>
+    <p class="icp">沪ICP备2024058569号-2</p>
   </footer>
 {{- end -}}
